[package]
name = "ledpi-rs"
version = "0.1.0"
authors = ["xerxes"]

[dependencies]
rocket = "0.3.15"
rocket_codegen = "0.3.15"
serde = "1.0.74"
serde_derive = "1.0.74"
app_dirs = "1.2.1"
structopt = "0.2.10"
toml = "0.4.6"
sysfs_gpio = "0.5.3"
clap = "2.32.0"
i2c-pca9685 = "0.1.8"
i2cdev = "~0.3.1"
